--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,34 @@ plugins {
 
 android {
     compileSdk 30
+    ndkVersion "21.4.7075529"
+
+    buildFeatures {
+        viewBinding true
+    }
 
     defaultConfig {
         applicationId "com.mokhtarabadi.pegasocks"
-        minSdk 18
+        minSdk 16
         targetSdk 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        externalNativeBuild {
+            cmake {
+                cppFlags "-std=c++11"
+                arguments "-DANDROID_STL=c++_static"
+            }
+        }
+    }
+
+    externalNativeBuild {
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
+            version "3.10.2"
+        }
     }
 
     buildTypes {
@@ -28,6 +47,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.getkeepsafe.relinker:relinker:1.4.4'
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
